# axum-playground

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  cloudbuild.yaml  deny.toml  rust-toolchain.toml
.agents/skills/axum-endpoint/: SKILL.md
.agents/skills/axum-endpoint/agents/: openai.yaml
.agents/skills/pagination-endpoint/: SKILL.md
.agents/skills/pagination-endpoint/agents/: openai.yaml
.agents/skills/readme-maintenance/: SKILL.md
.agents/skills/readme-maintenance/agents/: openai.yaml
.agents/skills/rust-testing/: SKILL.md
.agents/skills/rust-testing/agents/: openai.yaml
.cargo/: mutants.toml
.github/: dependabot.yml  labeler.yml
.github/agents/: readme-review.agent.md  security-review.agent.md
.github/skills/axum-endpoint/: SKILL.md
.github/skills/pagination-endpoint/: SKILL.md
.github/skills/rust-testing/: SKILL.md
.github/workflows/: app-ci.yml  app-lint.yml  dependabot-auto-merge.yml  labeler-manual.yml  labeler.yml  workflow-security.yml
functions/: README.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  shutdown.rs  state.rs  telemetry.rs  validation.rs
src/auth/: mod.rs
src/http/: codec.rs  extract.rs  health.rs  mod.rs  negotiation.rs  schema.rs
src/http/v1/: docs.rs  github.rs  hello.rs  items.rs  mod.rs  profile.rs
src/middleware/: logging.rs  mod.rs  recover.rs  request_id.rs  security.rs  timeout.rs
src/pagination/: cursor.rs  link.rs  mod.rs
src/problem/: mod.rs  negotiate.rs
src/services/: github.rs  mod.rs  profile.rs
tests/: api_github.rs  api_health.rs  api_hello.rs  api_items.rs  api_platform.rs  api_profile.rs  firestore_emulator.rs  openapi_contract.rs  problem_details.rs  startup.rs
tests/common/: mod.rs
