[package]
name = "axum-playground"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["cors", "limit", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
ciborium = "0.2.2"
futures-util = "0.3.31"
time = { version = "0.3.53", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
utoipa = "5.5.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = "0.20.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
jsonwebtoken = "10.4.0"
firestore = "0.49.0"
google-cloud-auth = "1.13.0"
rustls = { version = "0.23.41", features = ["ring"] }
